--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
 <head>
     <title>croissant</title>
     <style>
+
+        :root {
+            color-scheme: light dark;
+        }
+
+        @media (prefers-color-scheme: light) {
+            :root {
+                --background: #ffffff;
+            }
+        }
+
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --background: #0b0b0b;
+            }
+        }
         body{
-            background-color: #0b0b0b;
+            background-color: var(--background);
         }
         
         .croissant{
