--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .croissant{
             height: 200px;
             width: 200px;
-            margin-top:25%;
+            margin-top:25vh;
             margin-left: auto;
             margin-right: auto;
             background-image: url('./croissant.png');
