--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <head>
     <title>croissant</title>
+
+    <!--favicons-->
+    <link rel="shortcut icon" href="./favicon.ico"/>
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png"/>
+
+    <!--css-->
     <style>
 
         :root {
