--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!--css-->
     <style>
 
+        html{
+            overflow-x: hidden;
+        }
+        
         :root {
             color-scheme: light dark;
         }
