--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 
         </div>
 
+        <!--Adhoc Workload 2-->
         <div class="script-container">
 
             <div class="subtitle">Alternate Adhoc Workload Calculator</div>
