--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
             
         }
 
+
+        /* Download Buttons */
         .dl-button{
             display: block;
             height: 50px;
@@ -129,6 +131,8 @@
             transition: background-color 0.5s;
         }
 
+
+        /* Text Elements */
         .title{
             padding-top: 10px;
             font-size: 50px;
@@ -178,6 +182,8 @@
             height: 100%;
         }
 
+
+        /* Footer */
         footer{
             height: 50px;
             width: 100vw;
@@ -200,7 +206,6 @@
         <div class="subtitle">Tasty SQL Scripts</div>
 
         <!--Script Boxes-->
-        
         <!--Adhoc Workload 1-->
         <div class="script-container">
 
