--- a/index.html
+++ b/index.html
@@ -167,11 +167,18 @@
         }
 
         .description{
+            /* Dimensions */
             height:60%;
+            width:54vw;
+
+            /* Margins & Padding */
             margin-top: 15px;
             margin-left: 20px;
-            width:54vw;
+            padding-bottom: 15px;
+            
+            /* Font & Text */
             word-wrap: normal;
+            
         }
 
         .button-container{
