--- a/index.html
+++ b/index.html
@@ -161,8 +161,11 @@
         }
 
         .script-container .subtitle{
+            /* Margins & Padding */
             margin-top: 15px;
             margin-left: 20px;
+
+            /* Font & Text */
             font-weight: 600;
         }
 
