--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             color-scheme: light dark;
         }
 
+        /* Light Mode */
         @media (prefers-color-scheme: light) {
             :root {
                 --color: #0b0b0b;
@@ -39,6 +40,7 @@
             }
         }
 
+        /* Dark Mode */
         @media (prefers-color-scheme: dark) {
             :root {
                 --color: #ffffff;
