--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         /* Light Mode */
         @media (prefers-color-scheme: light) {
             :root {
+                /* Font & Text */
                 --color: #0b0b0b;
                 --background: #ffffff;
                 --background2: #eeeeee;
