--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
             :root {
                 /* Font & Text */
                 --color: #0b0b0b;
+
+                /* Background */
                 --background: #ffffff;
                 --background2: #eeeeee;
+
+                /* Shadow */
                 --shadow: rgba(0,0,0,0.5);
             }
         }
