--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             :root {
                 /* Font & Text */
                 --color: #0b0b0b;
+                --color2: red;
 
                 /* Background */
                 --background: #ffffff;
@@ -48,9 +49,14 @@
         /* Dark Mode */
         @media (prefers-color-scheme: dark) {
             :root {
+                /* Font & Text */
                 --color: #ffffff;
+                --color2: gold;
+                /* Background */
                 --background: #0b0b0b;
                 --background2: #1b1b1b;
+
+                /* Shadow */
                 --shadow: rgba(0,0,0,0.1);
             }
         }
