--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         </div>
     </div>
     <footer>
-        <span>&#129360;&nbsp; created by <a style="text-decoration: none; color: gold;" href="https://github.com/dark-coffee">dark-coffee</a>, 2020.</span><span style="margin-right: 30px;"></span>
+        <span>&#129360;&nbsp; created by <a style="text-decoration: none; color: var(--color2);" href="https://github.com/dark-coffee">dark-coffee</a>, 2020.</span><span style="margin-right: 30px;"></span>
     </footer>
 </body>
 </html>
