--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
             height: 50px;
             width: 100vw;
 
-            /* FOnt & Text */
+            /* Font & Text */
             line-height: 50px;
             font-size: 18px;
             font-weight: 100;
