--- a/index.html
+++ b/index.html
@@ -268,7 +268,15 @@
             
         }
 
+        .heading{
+            /* Margins & Padding */
+            margin-top: 15px;
+            margin-left: 20px;
 
+            /* Font & Text */
+            font-weight: 600;
+        }
+        
         /* Footer */
         footer{
 
