--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
             width: 85vw;
 
             /* Margins & Padding */
-            margin-top: 50px;
             margin-left: auto;
+            margin-bottom: 50px;
             margin-right: auto;
 
             /* Background */
@@ -270,11 +270,14 @@
 
         .heading{
             /* Margins & Padding */
-            margin-top: 15px;
-            margin-left: 20px;
+            margin-top: 100px;
+            margin-bottom: 20px;
+            margin-left: 8vw;
+
 
             /* Font & Text */
-            font-weight: 600;
+            font-size: 30px;
+            font-weight: 100;
         }
         
         /* Footer */
