--- a/index.html
+++ b/index.html
@@ -280,6 +280,29 @@
             font-weight: 100;
         }
         
+        .snippet-container{
+
+            /* Position */
+            position: relative;
+
+            /* Dimenstions */
+            height: auto;
+            width: 85vw;
+
+            /* Margins & Padding */
+            margin-left: auto;
+            margin-bottom: 50px;
+            margin-right: auto;
+
+            /* Background */
+            background-color: rgb(246,248,250);
+            
+            /* Borders */
+            border: 1px solid rgb(246,248,250);
+            border-radius: 10px;
+
+        }
+
         /* Footer */
         footer{
 
