--- a/index.html
+++ b/index.html
@@ -291,15 +291,17 @@
 
             /* Margins & Padding */
             margin-left: auto;
-            margin-bottom: 50px;
+            margin-bottom: 20px;
             margin-right: auto;
 
             /* Background */
-            background-color: rgb(246,248,250);
+            background-color: rgb(174, 182, 190);
             
             /* Borders */
             border: 1px solid rgb(246,248,250);
-            border-radius: 10px;
+            border-radius: 5px;
+
+            color: #0b0b0b;
 
         }
 
