--- a/index.html
+++ b/index.html
@@ -290,7 +290,8 @@
         
 
         .snippet-container{
-            background-color: hotpink;
+            margin-top: 10px;
+            margin-bottom: 35px;
         }
 
         .snippet-description{
@@ -299,10 +300,12 @@
 
             /* Margins & Padding */
             margin-left: auto;
-            margin-bottom:7px;
+            margin-bottom:5px;
             margin-right: auto;
+            padding-left: 6px;
 
             /* Font & Text */
+            font-weight: bold;
         }
 
         .snippet-code{
