--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="apple-touch-icon" href="./apple-touch-icon.png"/>
 
     <!--css-->
+    <link rel="stylesheet" type="text/css" src="style.css" />
     <style>
 
         /* Entire Document */
