--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body onresize="debugWindowSize();" onload="debugWindowSize();">
     <div class="pasty-box">
         <div class="croissant"></div>
-        <span id="debug-window-size" style="position: absolute; bottom:20px; right:20px; color:#2b2b2b">Hello! I'm: 0000x0000</span>
+        <span id="debug-window-size" style="position: absolute; bottom:20px; right:20px; color:#444444;">Hello! I'm: 0000x0000</span>
     </div>
 
     <div class="drawer">
