--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         
     </div>
     <footer>
-        <span id="debug-window-size" style="color: var(--color2);">hello! i'm: 0000x0000</span>
+        <span id="debug-window-size" style="color: var(--color2);"></span>
         <span>&#129360;&nbsp; created by <a style="text-decoration: none; color: var(--color2);" href="https://github.com/dark-coffee">dark-coffee</a>, 2020.</span><span style="margin-right: 30px;"></span>
     </footer>
     <script>
@@ -104,7 +104,7 @@
             var debugWindowDisplay = document.getElementById("debug-window-size");
 
             //Write Size to Screen
-            debugWindowDisplay.innerHTML = "Hello! I'm: " + debugWindowWidth + "x" + debugWindowHeight;
+            debugWindowDisplay.innerHTML = "hello! i'm: " + debugWindowWidth + "x" + debugWindowHeight;
 
         };
     </script>
