--- a/index.html
+++ b/index.html
@@ -90,10 +90,15 @@
         
         
     </div>
+
+    <div class="debug-bar">
+        <span id="debug-window-size" style="color: #0b0b0b;"></span><span style="margin-right: 30px;"></span>
+    </div>
+
     <footer>
-        <span id="debug-window-size" style="color: var(--color2);"></span>
         <span>&#129360;&nbsp; created by <a style="text-decoration: none; color: var(--color2);" href="https://github.com/dark-coffee">dark-coffee</a>, 2020.</span><span style="margin-right: 30px;"></span>
     </footer>
+
     <script>
         //Debug: Window Size
         function debugWindowSize () {
