--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             var debugWindowDisplay = document.getElementById("debug-window-size");
 
             //Write Size to Screen
-            debugWindowDisplay.innerHTML = "hello! i'm: " + debugWindowWidth + "x" + debugWindowHeight + ".";
+            debugWindowDisplay.innerHTML = "hello! this window is: " + debugWindowWidth + "x" + debugWindowHeight + ".";
 
         };
     </script>
