--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
             <div class="snippet-description">Get Instance Version Number</div>
             <div class="snippet-code">SELECT value_data FROM sys.dm_server_registry WHERE value_name = 'CurrentVersion';</div>
         </div>
+
+        <div class="snippet-container">
+            <div class="snippet-description">Get Instance Bitness</div>
+            <div class="snippet-code">SELECT SUBSTRING ((SELECT @@VERSION), CHARINDEX('x',(SELECT @@VERSION)),3) as 'InstanceBitness';</div>
+        </div>
         
         
     </div>
