--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <!--Script Boxes-->
         <div class="heading">Scripts</div>
-        <div class="section-description">I should probably put something here.</div>
+        <div class="section-description">Downloadable script files.</div>
 
         <!--Adhoc Workload 1-->
         <div class="script-container">
@@ -62,7 +62,7 @@
 
         <!--Snippets-->
         <div class="heading">Snippets</div>
-        <div class="section-description">I should probably put something here.</div>
+        <div class="section-description">Useful snippets of T-SQL.</div>
         <div class="snippet-container">
             <div class="snippet-description">Display Query Disk Statistics</div>
             <div class="snippet-code">SET STATISTICS IO ON</div>
