--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         </div>
 
         <div class="snippet-container">
+            <div class="snippet-description">Display Query Time & IO Statistics</div>
+            <div class="snippet-code">SET STATISTICS TIME, IO ON</div>
+        </div>
+
+        <div class="snippet-container">
             <div class="snippet-description">Get Instance Start Time</div>
             <div class="snippet-code">SELECT sqlserver_start_time FROM sys.dm_os_sys_info;</div>
         </div>
