--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
             <div class="snippet-code">SELECT SUBSTRING ((SELECT @@VERSION), CHARINDEX('x',(SELECT @@VERSION)),3) as 'InstanceBitness';</div>
         </div>
         
+
+        <div class="subtitle">Ozar Specific</div>
+        <div class="snippet-container">
+            <div class="snippet-description">sp_BlitzIndex, all databases, all indexes.</div>
+            <div class="snippet-code">EXEC sp_BlitzIndex @GetAllDatabases = 1, @Mode = 2;</div>
+        </div>
         
     </div>
 
