--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
         </div>
 
 
+        <!--SQL Server Quick Configure-->
+        <div class="script-container">
+
+            <div class="subtitle">SQL Server Quick Configure</div>
+            <div class="description">
+                Quickly sets a few key configurations within SQL Server.</br>
+                Version: 1.1
+            </div>
+            <div class="button-container">
+                <a class="dl-button" href="./scripts/SQLServer_QuickConfigure.sql" download>download</a>
+            </div>
+
+        </div>
+
+
         <!--Snippets-->
         <div class="heading">Snippets</div>
         <div class="section-description">Useful snippets of T-SQL.</div>
