--- a/croissant-dev.html
+++ b/croissant-dev.html
@@ -17,7 +17,10 @@
             margin: 0;
             padding: 0;
             /*background: repeating-linear-gradient(-55deg,#222,#222 50px,#333 50px,#333 100px);*/
-            background-color: #fff;
+            background-image: url('./croissant.png');
+            background-size: 30px;
+            background-repeat: repeat;
+            background-color: #ffffff;
         }
 
         .code-download{
@@ -221,7 +224,8 @@
 
             /* Dimensions */
             height: 250px;
-            width: 600px;
+            min-width: 400px;
+            max-width: 600px;
 
             /* Display */
             display: block;
