--- a/croissant-dev.html
+++ b/croissant-dev.html
@@ -30,7 +30,8 @@
 
             /* Dimensions */
             height: 250px;
-            width: 600px;
+            min-width: 400px;
+            max-width: 600px;
 
             /* Display */
             display: block;
