--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body onresize="debugWindowSize();" onload="debugWindowSize();">
-    <div class="pasty-box">
+    <div class="pastry-box">
         <div class="croissant"></div>
     </div>
 
