--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -9,10 +9,14 @@
             font-family: 'ITC Avant Garde Std Bold';
             src: url('./assets/ITCAvantGardeStdBold.otf');
         }
+        @font-face {
+            font-family: 'ITC Avant Garde Std Book';
+            src: url('./assets/ITCAvantGardeStdBk.otf');
+        }
         body{
             overflow-x: hidden;
-            font-family: 'ITC Avant Garde Std Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            background-color: #f8f8f8;
+            font-family: 'Avenir', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-color: rgba(29,30,32,1);
         }
         .container{
             position: absolute;
@@ -32,12 +36,12 @@
         .header-top{
             height: 90px;
             width: 100vw;
-            background-color: #ffffff;
+            background-color: rgba(29,30,32,1);
             box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
         }
 
         .header-title{
-            color: #939597;
+            color: #f8f8f8;
             font-size: 35px;
             line-height: 90px;
             padding-left: 30px;
@@ -52,7 +56,7 @@
         }
 
         .main-content{
-            background-color: #ffffff;
+            background-color: rgba(29,30,32,1);
             min-height: 500px;
             height: auto;
             padding-top: 50px;
@@ -61,7 +65,7 @@
         .footer{
             height: 250px;
             width: 100vw;
-            background-color: #f8f8f8;
+            background-color: #171718;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             position: relative;
         }
