--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -1,18 +1,16 @@
 <!doctype html>
 <html>
 <head>
+    <title>croissant</title>
 
+    <!--favicons-->
+    <link rel="shortcut icon" href="./favicon.ico"/>
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png"/>
+
+    <!--css-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-
-        @font-face {
-            font-family: 'ITC Avant Garde Std Bold';
-            src: url('./assets/ITCAvantGardeStdBold.otf');
-        }
-        @font-face {
-            font-family: 'ITC Avant Garde Std Book';
-            src: url('./assets/ITCAvantGardeStdBk.otf');
-        }
+        
         body{
             overflow-x: hidden;
             font-family: 'Avenir', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -31,6 +29,8 @@
             width: 100vw;
             /*background-color: orange;*/
             background-color: #FFD700;
+            user-select: none;
+            -moz-user-select: none;
         }
 
         .header-top{
@@ -55,6 +55,17 @@
             background-repeat: repeat;
         }
 
+        .header-image-text{
+            height: 230px;
+            width: 100vw;
+            background: rgba(0,0,0,0.25);
+            text-align: center;
+            line-height: 230px;
+            font-weight: bolder;
+            font-size: 60px;
+            color: #f8f8f8;
+        }
+
         .main-content{
             background-color: rgba(29,30,32,1);
             min-height: 500px;
@@ -63,11 +74,27 @@
         }
 
         .footer{
-            height: 250px;
+            /*height: 250px;
             width: 100vw;
             background-color: #171718;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            position: relative;
+            position: relative;*/
+
+            width: 100vw;
+            height: 30px;
+            line-height: 30px;
+            text-align: center;
+            margin-top: 10vh;
+            margin-right:auto;
+            /*desktop margin margin-bottom: 5px;*/
+            /*mobile margin below*/
+            margin-bottom: 0px;
+            margin-left:auto;
+            font-size: 13px;
+            color: #666;
+            background-color: #171718;
+            user-select: none;
+            -moz-user-select: none;
         }
 
         .footer-text{
@@ -79,21 +106,33 @@
             text-align: center;
             font-size: 14px;
         }
+
+        .footer-element{
+            display: inline-flex;
+            margin-left: 0px;
+            margin-right: 0px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <div class="header-top">
-                <div class="header-title">://dark-coffee/croissant</div>
+                <div class="header-title">croissant</div>
             </div>
-            <div class="header-image"></div>
+            <div class="header-image">
+                <div class="header-image-text">Microsoft SQL Server Stuff</div>
+            </div>
         </div>
         <div class="main-content">
             
         </div>
         <div class="footer">
-            <div class="footer-text">2021 dark-coffee</div>
+            <div class="footer-element"><span style="color: gold;">&#183;</span></div>
+            <div class="footer-element">2021 dark-cofee</div>
+            <div class="footer-element"><span style="color: gold;">&#183;</span></div>
+            <div class="footer-element">powered by github pages</div>
+            <div class="footer-element"><span style="color: gold;">&#183;</span></div>
         </div>
     </div>
 </body>
