--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -15,6 +15,7 @@
             overflow-x: hidden;
             font-family: 'Avenir', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             background-color: rgba(29,30,32,1);
+            color: #f8f8f8;
         }
         .container{
             position: absolute;
@@ -71,6 +72,7 @@
             min-height: 500px;
             height: auto;
             padding-top: 50px;
+            text-align: center;
         }
 
         .footer{
@@ -115,18 +117,87 @@
     </style>
 </head>
 <body>
+
+    <!--content wrapper-->
     <div class="container">
+
+        <!--header-->
         <div class="header">
+            <!--title bar-->
             <div class="header-top">
                 <div class="header-title">croissant</div>
             </div>
+            <!--header image & text-->
             <div class="header-image">
                 <div class="header-image-text">Microsoft SQL Server Stuff</div>
             </div>
         </div>
+
+        <!--main content area-->
         <div class="main-content">
-            
+
+            <p>introduction</p>
+            <p></p>
+
+            <!--section 1: training courses-->
+            <div class="content-section">
+                <!--header-->
+                <div class="content-section-heading">Training Courses</div>
+
+                <!--course 1: T-SQL Basics-->
+                <div class="training-course">
+                    <div class="training-course-title">T-SQL Basics</div>
+                    <div class="training-course-image"></div>
+                    <div class="training-course-description"></div>
+                    <div class="training-course-downloads">
+                        <div class="training-course-download-slides">Slide Deck</div>
+                        <div class="training-course-download-script">Script Pack</div>
+                    </div>
+                </div>
+
+                <!--course 2: Advanced T-SQL-->
+                <div class="training-course">
+                    <div class="training-course-title">Advanced T-SQL</div>
+                    <div class="training-course-description"></div>
+                    <div class="training-course-downloads">
+                        <div class="training-course-download-slides">Slide Deck</div>
+                        <div class="training-course-download-script">Script Pack</div>
+                    </div>
+                </div>
+
+                <!--course 3: SQL Server Configuration-->
+                <div class="training-course">
+                    <div class="training-course-title">SQL Server Configuration</div>
+                    <div class="training-course-description"></div>
+                    <div class="training-course-downloads">
+                        <div class="training-course-download-slides">Slide Deck</div>
+                        <div class="training-course-download-script">Script Pack</div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+            <div class="content-section">
+                <div class="content-section-heading">Scripts</div>
+                <div class="script">
+                    <div class="script-title">Ad Hoc Workload Calculator</div>
+                    <div class="script-description"></div>
+                    <div class="script-download">download</div>
+                </div>
+            </div>
+
+            <div class="content-section">
+                <div class="content-section-heading">Snippets</div>
+                <div class="snippet">
+                    <div class="snippet-title">title</div>
+                    <div class="snippet-code">code</div>
+                </div>
+            </div>
         </div>
+
+        <!--footer-->
         <div class="footer">
             <div class="footer-element"><span style="color: gold;">&#183;</span></div>
             <div class="footer-element">2021 dark-cofee</div>
@@ -134,6 +205,7 @@
             <div class="footer-element">powered by github pages</div>
             <div class="footer-element"><span style="color: gold;">&#183;</span></div>
         </div>
+
     </div>
 </body>
 </html>
