--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -87,10 +87,30 @@
         }
 
 
+        /********************/
         /* training courses */
-        .
+        /********************/
+        .training-course{
+            border: 3px solid #3b3b3b;
 
+            width: 60vw;
+            margin-top: 10px;
+            margin-left: auto;
+            margin-bottom: 10px;
+            margin-right: auto;
+        }
 
+        .training-course-title{
+            padding-top: 20px;
+            padding-left: 20px;
+            text-align: left;
+            font-weight: bold;
+            font-size: 20px;
+        }
+
+        .training-course-download-link{
+            display: inline-flex;
+        }
         /********************/
 
 
@@ -171,8 +191,8 @@
                     <div class="training-course-image"></div>
                     <div class="training-course-description"></div>
                     <div class="training-course-downloads">
-                        <div class="training-course-download-slides">Slide Deck</div>
-                        <div class="training-course-download-script">Script Pack</div>
+                        <div class="training-course-download-link">Slide Deck</div>
+                        <div class="training-course-download-link">Script Pack</div>
                     </div>
                 </div>
 
@@ -181,8 +201,8 @@
                     <div class="training-course-title">Advanced T-SQL</div>
                     <div class="training-course-description"></div>
                     <div class="training-course-downloads">
-                        <div class="training-course-download-slides">Slide Deck</div>
-                        <div class="training-course-download-script">Script Pack</div>
+                        <div class="training-course-download-link">Slide Deck</div>
+                        <div class="training-course-download-link">Script Pack</div>
                     </div>
                 </div>
 
@@ -191,8 +211,8 @@
                     <div class="training-course-title">SQL Server Configuration</div>
                     <div class="training-course-description"></div>
                     <div class="training-course-downloads">
-                        <div class="training-course-download-slides">Slide Deck</div>
-                        <div class="training-course-download-script">Script Pack</div>
+                        <div class="training-course-download-link">Slide Deck</div>
+                        <div class="training-course-download-link">Script Pack</div>
                     </div>
                 </div>
 
@@ -201,8 +221,8 @@
                     <div class="training-course-title">SQL Server Extended Events</div>
                     <div class="training-course-description"></div>
                     <div class="training-course-downloads">
-                        <div class="training-course-download-slides">Slide Deck</div>
-                        <div class="training-course-download-script">Script Pack</div>
+                        <div class="training-course-download-link">Slide Deck</div>
+                        <div class="training-course-download-link">Script Pack</div>
                     </div>
                 </div>
 
