--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -16,7 +16,9 @@
             font-family: 'Avenir', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             background-color: rgba(29,30,32,1);
             color: #f8f8f8;
+            cursor: default;
         }
+        
         .container{
             position: absolute;
             top: 0px;
@@ -110,6 +112,12 @@
 
         .training-course-download-link{
             display: inline-flex;
+            color: gold;
+            cursor: pointer;
+        }
+
+        .training-course-download-link :visited{
+            color: goldenrod;
         }
         /********************/
 
