--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -66,6 +66,7 @@
             background-size: 46px;
             background-repeat: repeat;
             margin-top: 75px;
+            display: none;
         }
 
         .header-image-text{
@@ -86,6 +87,23 @@
             padding-top: 50px;
             text-align: center;
         }
+
+        
+
+
+        /********************/
+        /* info styling     */
+        /********************/
+        .about-text{
+            width: 40vw;
+            text-align: left;
+            margin-top: -40px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        /********************/
+
 
         /********************/
         /* divider          */
@@ -234,8 +252,10 @@
         <!--main content area-->
         <div class="main-content">
 
-            <p>introduction</p>
-            <p></p>
+            <div class="content-section">
+                <div class="content-section-heading">Hi there!</div>
+                <div class="about-text">information here</div>
+            </div>
 
             <div class="divider"></div>
 
@@ -311,8 +331,8 @@
             <div class="content-section">
                 <div class="content-section-heading">Snippets</div>
                 <div class="snippet">
-                    <div class="snippet-title">title</div>
-                    <div class="snippet-code">code</div>
+                    <div class="snippet-title">Show Execution Statistics</div>
+                    <div class="snippet-code">STATISTICS TIME, IO ON;</div>
                 </div>
             </div>
 
