--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -187,9 +187,10 @@
 
         .training-course-download-link{
             display: inline-flex;
+            margin-top: 10px;
             margin-left: 5px;
             margin-right: 5px;
-            margin-bottom: 5px;
+            margin-bottom: 10px;
 
             color: gold;
             cursor: pointer;
@@ -282,8 +283,9 @@
                     <div class="training-course-image"></div>
                     <div class="training-course-description">
                         This course provides a basic overview of SQL Server, relational database theory, database building blocks and an introduction into the T-SQL language and its syntax.</br> 
-                        The T-SQL portion covers SELECT, FROM, WHERE, UPDATE, JOIN, and Transactions and their importance.</br>
-                        Additionally, this course also contains a practical exercise section, to familiarise trainees with the course content.</br></br>
+                        The T-SQL section covers SELECT, FROM, WHERE, UPDATE, JOIN, and Transactions and their importance.</br>
+                        Additionally, this course also contains a practical exercise portion, to familiarise trainees with the course content.</br>
+                        </br>
                         <b>Updated:</b> 2021
                     </div>
                     <div class="training-course-downloads">
@@ -296,7 +298,11 @@
                 <div class="training-course">
                     <div class="training-course-title">Advanced T-SQL Querying</div>
                     <div class="training-course-image"></div>
-                    <div class="training-course-description"></div>
+                    <div class="training-course-description">
+                    
+                        </br>
+                        <b>Updated:</b> 2021
+                    </div>
                     <div class="training-course-downloads">
                         <div class="training-course-download-link">Slide Deck</div>
                         <div class="training-course-download-link">Script Pack</div>
@@ -307,7 +313,11 @@
                 <div class="training-course">
                     <div class="training-course-title">SQL Server Configuration</div>
                     <div class="training-course-image"></div>
-                    <div class="training-course-description"></div>
+                    <div class="training-course-description">
+
+                        </br>
+                        <b>Updated:</b> 2021    
+                    </div>
                     <div class="training-course-downloads">
                         <div class="training-course-download-link">Slide Deck</div>
                         <div class="training-course-download-link">Script Pack</div>
@@ -318,7 +328,9 @@
                 <div class="training-course">
                     <div class="training-course-title">SQL Server Extended Events</div>
                     <div class="training-course-image"></div>
-                    <div class="training-course-description"></div>
+                    <div class="training-course-description">
+                        <span style="line-height: 196px;">This course is upcoming.</span>
+                    </div>
                     <div class="training-course-downloads">
                         <div class="training-course-download-link">Slide Deck</div>
                         <div class="training-course-download-link">Script Pack</div>
