--- a/croissant-dev-2.html
+++ b/croissant-dev-2.html
@@ -202,7 +202,10 @@
         }
 
         /* Slides */
+        #tc-basic{background-image: url(./resources/courses/tsql_basics/slide.jpg);}
+        #tc-advanced{background-image: url(./resources/courses/tsql_advanced/slide.jpeg);}
         #tc-config{background-image: url(./resources/courses/sql_server_config/slide.jpeg);}
+        #tc-placeholder{background-image: url(./assets/SQL4_1920.jpg);}
         /********************/
 
 
@@ -284,8 +287,8 @@
                 <!--course 1: T-SQL Basics-->
                 <div class="training-course">
                     <div class="training-course-title">Basic T-SQL Querying</div>
-                    <div class="training-course-image"></div>
-                    <div class="training-course-description">
+                    <div class="training-course-image" id="tc-basic"></div>
+                    <div class="training-course-description"><!--54 words-->
                         This course provides a basic overview of SQL Server, relational database theory, database building blocks and an introduction into the T-SQL language and its syntax.</br> 
                         The T-SQL section covers SELECT, FROM, WHERE, UPDATE, JOIN, and Transactions and their importance.</br>
                         Additionally, this course also contains a practical exercise portion, to familiarise trainees with the course content.</br>
@@ -301,7 +304,7 @@
                 <!--course 2: Advanced T-SQL-->
                 <div class="training-course">
                     <div class="training-course-title">Advanced T-SQL Querying</div>
-                    <div class="training-course-image"></div>
+                    <div class="training-course-image" id="tc-advanced"></div>
                     <div class="training-course-description">
                     
                         </br>
@@ -318,7 +321,8 @@
                     <div class="training-course-title">SQL Server Configuration</div>
                     <div class="training-course-image" id="tc-config"></div>
                     <div class="training-course-description">
-
+                        This course covers functional elements of SQL Server, configuration options, performance tips, and provides guidance on determining optimal configuration.</br>
+                        </br>
                         </br>
                         <b>Updated:</b> 2021    
                     </div>
@@ -331,7 +335,7 @@
                 <!--course 4: SQL Server Extended Events-->
                 <div class="training-course">
                     <div class="training-course-title">SQL Server Extended Events</div>
-                    <div class="training-course-image"></div>
+                    <div class="training-course-image" id="tc-placeholder"></div>
                     <div class="training-course-description">
                         <span style="line-height: 196px;">This course is upcoming.</span>
                     </div>
